--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -80,7 +80,7 @@ body {
 /* card */
 .main-content .card {
     border-bottom: 1px solid var(--Light-pink);
-    padding-bottom: 20px;
+    padding: 20px 0;
 }
 
 .main-content .card .title {
@@ -95,7 +95,11 @@ body {
     font-size: 16px;
     font-weight: 600;
     color: var(--Dark-purple);
-    padding-top: 20px;
+    transition: all .5s ease-in-out;
+}
+
+.main-content .card .title h2:hover {
+    color: var(--pink);
 }
 
 .main-content .card .title .icons {
@@ -129,7 +133,6 @@ body {
     opacity: 0;
     overflow: hidden;
     transition: all 1s ease-in-out;
-    padding-top: 20px;
 }
 
 /* Active class */
@@ -148,4 +151,5 @@ body {
 .main-content .on p{
     max-height: 150px;
     opacity: 1;
+    padding-top: 20px;
 }
